--- a/.github/workflows/build-and-publish-to-dockerhub.yml
+++ b/.github/workflows/build-and-publish-to-dockerhub.yml
@@ -1,10 +1,10 @@
+
 name: Build and Publish to Docker Hub
 
-# Kích hoạt workflow khi có push vào nhánh 'main'
+# Kích hoạt workflow khi có release mới được publish
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 
 jobs:
   build-and-publish:
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -34,6 +37,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           # Sử dụng tags đã được tạo tự động từ bước metadata
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
