--- a/Dockerfile-multi.disable
+++ b/Dockerfile-multi.disable
@@ -8,13 +8,12 @@ LABEL license="MPL-2.0"
 # Các biến môi trường để cài đặt runner
 ARG RUNNER_VERSION="2.311.0"
 # Sử dụng TARGETARCH để xác định kiến trúc khi build đa nền tảng
-#ARG TARGETARCH
+ARG TARGETARCH
 ENV RUNNER_USER="runner"
 ENV RUNNER_HOME="/home/runner"
 ENV ACTIONS_RUNNER_INPUT_URL=""
 ENV ACTIONS_RUNNER_INPUT_TOKEN=""
-#ENV ACTIONS_RUNNER_INPUT_LABELS="ubuntu-24.04,arm64"
-ENV ACTIONS_RUNNER_INPUT_LABELS="ubuntu-24.04,arm64"
+ENV ACTIONS_RUNNER_INPUT_LABELS="ubuntu-24.04"
 
 # Cập nhật hệ thống và cài đặt các dependencies cần thiết
 RUN apt-get update && apt-get install -y \
@@ -33,19 +32,14 @@ RUN useradd -m -s /bin/bash "${RUNNER_USER}" && \
 WORKDIR "${RUNNER_HOME}"
 
 # Tải và cài đặt GitHub Actions runner phù hợp với kiến trúc
-#RUN set -e; \
-#    if [ "$TARGETARCH" = "amd64" ]; then ARCH="x64"; \
-#    elif [ "$TARGETARCH" = "arm64" ]; then ARCH="arm64"; \
-#    elif [ "$TARGETARCH" = "arm" ] || [ "$TARGETARCH" = "arm/v7" ]; then ARCH="arm"; \
-#    else echo "Unsupported architecture: $TARGETARCH" && exit 1; fi; \
-#    curl -o actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz -L https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz && \
-#    tar xzf ./actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz && \
-#    rm ./actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz
-
-# Tải và cài đặt GitHub Actions runner cho ARM64
-RUN curl -o actions-runner-linux-arm64-${RUNNER_VERSION}.tar.gz -L https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-arm64-${RUNNER_VERSION}.tar.gz && \
-    tar xzf ./actions-runner-linux-arm64-${RUNNER_VERSION}.tar.gz && \
-    rm ./actions-runner-linux-arm64-${RUNNER_VERSION}.tar.gz
+RUN set -e; \
+    if [ "$TARGETARCH" = "amd64" ]; then ARCH="x64"; \
+    elif [ "$TARGETARCH" = "arm64" ]; then ARCH="arm64"; \
+    elif [ "$TARGETARCH" = "arm" ] || [ "$TARGETARCH" = "arm/v7" ]; then ARCH="arm"; \
+    else echo "Unsupported architecture: $TARGETARCH" && exit 1; fi; \
+    curl -o actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz -L https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz && \
+    tar xzf ./actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz && \
+    rm ./actions-runner-linux-${ARCH}-${RUNNER_VERSION}.tar.gz
 
 # Cài đặt các dependencies cho runner
 RUN sudo ./bin/installdependencies.sh
