--- a/.github/workflows/build-and-publish-to-dockerhub-arm64.yml
+++ b/.github/workflows/build-and-publish-to-dockerhub-arm64.yml
@@ -37,7 +37,8 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          #platforms: linux/amd64,linux/arm64,linux/arm/v7          
+          platforms: linux/arm64
           # Sử dụng tags đã được tạo tự động từ bước metadata
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
